전체적인 코드 수정 / all menu gap 조절

--- a/pages/index.html
+++ b/pages/index.html
@@ -52,16 +52,18 @@
     <script defer src="../resources/js/include.js"></script>
     <script defer src="../resources/js/pattern/ui-swiper.js"></script>
     <script defer src="../resources/js/pattern/ui-pattern-script.js"></script>
-    <script src="../resources/js/pattern/ui-fullpage.js"></script>
+
     <!-- Fullpage -->
+    <!-- <script src="../resources/js/pattern/ui-fullpage.js"></script> -->
+
     <!-- fullPage.js CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.min.css" />
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.min.css" /> -->
 
     <!-- jQuery (필수) -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
 
     <!-- fullPage.js JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.min.js"></script> -->
 </head>
 
 <body>
