--- a/pages/example.html
+++ b/pages/example.html
@@ -5,19 +5,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FullPage.js Example</title>
+
+    <link rel="stylesheet" href="../resources/css/output/pattern_css.css">
     <!-- fullPage.js CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.min.css" />
     <!-- jQuery (필수) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- fullPage.js JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.min.js"></script>
+    <!-- gsap -->
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+
+
 </head>
 
 <body>
     <!-- fullPage 컨테이너 -->
+    <div class="header">
+        header
+    </div>
     <div id="fullpage">
-        <div class="box">이건아님</div>
-        <div class="section">Section 1</div>
+        <div class="section">
+            <div class="main-visual" style="background-color: #fff;">
+                <div class="main-visual__ani">
+                    <div class="main-visual__txtBox">
+                        <div class="main-visual__tit">PIGEON</div>
+                        <div class="main-visual__con">
+                            <span class="main-visual__con__txt">피죤은 고도의 기술력을</span>
+                            <span class="main-visual__con__txt">가지고 시대 변화에 발맞춰 지속적인 발전을</span>
+                            <span class="main-visual__con__txt">이루어 나갑니다</span>
+                        </div>
+                    </div>
+                    <div class="main-visual__circle">
+                        <video src="../resources/images/pattern/common/main-ani.mp4" playsinline="" loop="" muted=""
+                            autoplay=""> </video>
+                        <div class="main-visual__txtBox">
+                            <div class="main-visual__tit">PIGEON</div>
+                            <div class="main-visual__con">
+                                <span class="main-visual__con__txt">피죤은 고도의 기술력을</span>
+                                <span class="main-visual__con__txt">가지고 시대 변화에 발맞춰 지속적인 발전을</span>
+                                <span class="main-visual__con__txt">이루어 나갑니다</span>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
         <div class="section">Section 2</div>
         <div class="section">Section 3</div>
         <div class="section">Section 4</div>
@@ -25,7 +60,7 @@
     <style>
         /* 전체 화면 크기로 설정 */
 
-        .box {
+        .header {
             width: 100%;
             height: 100%;
             background-color: red;
@@ -35,14 +70,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 3rem;
-            color: #fff;
         }
 
         /* 섹션별 배경색 */
-        .section:nth-child(1) {
-            background-color: #3498db;
-        }
+        .section:nth-child(1) {}
 
         .section:nth-child(2) {
             background-color: #e74c3c;
@@ -65,6 +96,10 @@
 
             });
         });
+
+
+
+
     </script>
 </body>
 
