--- a/pages/index.html
+++ b/pages/index.html
@@ -192,13 +192,20 @@
                 <div class="swiper mySwiper2">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide slide1">
-                            <div class="swiper-slide__txt inner">
+                            <div class="swiper-slide__tit">
+                                <p class="tit">BEST QUALTY</p>
+                            </div>
+
+                            <div class=" swiper-slide__txt inner">
                                 <strong>Best Qualty</strong>
                                 <strong>Life Partner</strong>
                                 <p>더욱 깨끗한 일상생활을 위해</p>
                             </div>
                         </div>
                         <div class="swiper-slide slide2">
+                            <div class="swiper-slide__tit">
+                                <p class="tit">PIGEON</p>
+                            </div>
                             <div class="swiper-slide__txt inner">
                                 <strong>PIGEON</strong>
                                 <p>불필요한 증점제와 색소는 빼고 3배 더 강화되어</p>
@@ -206,6 +213,9 @@
                             </div>
                         </div>
                         <div class="swiper-slide slide3">
+                            <div class="swiper-slide__tit">
+                                <p class="tit">NEW PRODUCTS</p>
+                            </div>
                             <div class="swiper-slide__txt inner">
                                 <strong>New Products</strong>
                                 <p>피죤의 신제품 디퓨저.</p>
