main visual 애니메이션, 배경 수정

--- a/pages/index.html
+++ b/pages/index.html
@@ -268,7 +268,8 @@
                 <div class="brand__tit" data-aos="fade-up" data-aos-duration="1000">
                     <strong>BRAND</strong>
                     <pre>
-피죤으로 청결과 향기로 가득한 일상,
+피죤으로 청결과 
+향기로 가득한 일상,
 한 번에 완성하세요. 
 매일 새롭게, 더 상쾌한 공간을 
 만들어 드립니다.     
