--- a/pages/index.html
+++ b/pages/index.html
@@ -163,7 +163,11 @@
         <div class="main-visual">
             <div class="main-visual__ani">
                 <div class="main-visual__txtBox">
-                    <div class="main-visual__tit">PIGEON</div>
+                    <div class="main-visual__tit">
+                        <span>PIGE</span>
+                        <img src="../resources/images/pattern/common/Oflower.png" alt="Oflower">
+                        <span>N</span>
+                    </div>
                     <div class="main-visual__con">
                         <span class="main-visual__con__txt">피죤은 고도의 기술력을</span>
                         <span class="main-visual__con__txt">가지고 시대 변화에 발맞춰 지속적인 발전을</span>
@@ -174,7 +178,11 @@
                     <video src="../resources/images/pattern/common/main-ani.mp4" playsinline="" loop="" muted=""
                         autoplay=""> </video>
                     <div class="main-visual__txtBox">
-                        <div class="main-visual__tit">PIGEON</div>
+                        <div class="main-visual__tit">
+                            <span>PIGE</span>
+                            <img src="../resources/images/pattern/common/Oflower.png" alt="Oflower">
+                            <span>N</span>
+                        </div>
                         <div class="main-visual__con">
                             <span class="main-visual__con__txt">피죤은 고도의 기술력을</span>
                             <span class="main-visual__con__txt">가지고 시대 변화에 발맞춰 지속적인 발전을</span>
