--- a/pages/index.html
+++ b/pages/index.html
@@ -164,9 +164,7 @@
             <div class="main-visual__ani">
                 <div class="main-visual__txtBox">
                     <div class="main-visual__tit">
-                        <span>PIGE</span>
-                        <img src="../resources/images/pattern/common/Oflower.png" alt="Oflower">
-                        <span>N</span>
+                        <span>PIGE<img src="../resources/images/pattern/common/Oflower.png" alt="Oflower">N</span>
                     </div>
                     <div class="main-visual__con">
                         <span class="main-visual__con__txt">피죤은 고도의 기술력을</span>
@@ -179,9 +177,7 @@
                         autoplay=""> </video>
                     <div class="main-visual__txtBox">
                         <div class="main-visual__tit">
-                            <span>PIGE</span>
-                            <img src="../resources/images/pattern/common/Oflower.png" alt="Oflower">
-                            <span>N</span>
+                            <span>PIGE<img src="../resources/images/pattern/common/Oflower.png" alt="Oflower">N</span>
                         </div>
                         <div class="main-visual__con">
                             <span class="main-visual__con__txt">피죤은 고도의 기술력을</span>
