--- a/pages/index.html
+++ b/pages/index.html
@@ -164,7 +164,11 @@
             <div class="main-visual__ani">
                 <div class="main-visual__txtBox">
                     <div class="main-visual__tit">
-                        <span>PIGE<img src="../resources/images/pattern/common/Oflower.png" alt="Oflower">N</span>
+                        <span>PIGE</span>
+                        <div class="flower">
+                            <img src="../resources/images/pattern/common/Oflower.png" alt="Oflower">
+                        </div>
+                        <span>N</span>
                     </div>
                     <div class="main-visual__con">
                         <span class="main-visual__con__txt">피죤은 고도의 기술력을</span>
@@ -177,7 +181,12 @@
                         autoplay=""> </video>
                     <div class="main-visual__txtBox">
                         <div class="main-visual__tit">
-                            <span>PIGE<img src="../resources/images/pattern/common/Oflower.png" alt="Oflower">N</span>
+                            <span>PIGE</span>
+                            <div class="flower">
+                                <img src="../resources/images/pattern/common/Oflower.png" alt="Oflower">
+                            </div>
+
+                            <span>N</span>
                         </div>
                         <div class="main-visual__con">
                             <span class="main-visual__con__txt">피죤은 고도의 기술력을</span>
