nav-all slidedown 대충 구현함

--- a/pages/index.html
+++ b/pages/index.html
@@ -108,7 +108,7 @@
 
                     <div class="util">
                         <!-- active시 드롭다운 활성화 -->
-                        <div class="lang active">
+                        <div class="lang">
                             <button class="lang__btn">kor</button>
                             <ul class="lang__lst">
                                 <li><a href="#">kor</a></li>
