--- a/pages/index.html
+++ b/pages/index.html
@@ -278,7 +278,7 @@
         <!-- brand -->
         <div class="brand">
             <div class="inner">
-                <div class="brand__tit" data-aos="fade-up" data-aos-duration="1000">
+                <div class="brand__tit" data-aos="fade-up" data-aos-duration="1500">
                     <strong>BRAND</strong>
                     <pre>
 피죤으로 청결과 
@@ -592,7 +592,7 @@
         <!--메인 -->
         <main id="container">
             <!-- cf & news -->
-            <section class="sec sec-g sec-news" data-aos="fade-right" data-aos-duration="1500">
+            <section class="sec sec-g sec-news" data-aos="fade-right" data-aos-duration="2000" data-aos-offset="800">
                 <div class="inner">
                     <h2 class="sec__tit">CF & NEWS</h2>
                     <div class="sec__cont">
@@ -733,7 +733,7 @@
             </section>
 
             <!-- contact -->
-            <section class="sec sec-contact" data-aos="fade-left" data-aos-duration="1000">
+            <section class="sec sec-contact" data-aos="fade-left" data-aos-duration="2000" data-aos-offset="800">
                 <div class="inner">
                     <h2 class="sec__tit">CONTACT</h2>
                     <div class="sec__cont">
