cursor 추가 / 이미지 변경 필요

--- a/pages/index.html
+++ b/pages/index.html
@@ -755,6 +755,11 @@
         </main>
         <!-- footer -->
         <footer id="footer" include-html="./layout/footer.html"></footer>
+
+
+        <div class="cursor">
+            <img src="https://www.selecto.co.kr/assets/images/main/mouse-cursor.png">
+        </div>
     </div>
 </body>
 
