--- a/pages/index.html
+++ b/pages/index.html
@@ -8,15 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
     <title>PIGEON</title>
     <meta property="og:type" content="website">
-    <meta property="og:title" content="페이지 제목">
-    <meta property="og:description" content="페이지 설명">
+    <meta property="og:title" content="PIGEON">
+    <meta property="og:description" content="유지혜 - 피죤 개편 사이트">
     <meta property="og:image" content="http://www.mysite.com/article/article1_featured_image.jpg">
     <meta property="og:url" content="http://www.mysite.com/article/article1.html">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="페이지 제목">
-    <meta name="twitter:description" content="페이지 설명">
+    <meta name="twitter:title" content="PIGEON">
+    <meta name="twitter:description" content="유지혜 - 피죤 개편 사이트">
     <meta name="twitter:image" content="http://www.mysite.com/article/article1.html">
-    <meta name="twitter:domain" content="사이트 명">
+    <meta name="twitter:domain" content="PIGEON">
 
     <!-- 파비콘 -->
     <!-- <link rel="shortcut icon" href="http://www.mysite.com/favicon.ico"> -->
