--- a/pages/index.html
+++ b/pages/index.html
@@ -56,6 +56,7 @@
     <script defer src="../resources/js/include.js"></script>
     <script defer src="../resources/js/pattern/ui-swiper.js"></script>
     <script defer src="../resources/js/pattern/ui-pattern-script.js"></script>
+    <script defer src="../resources/js/pattern/index.js"></script>
 
     <!-- Fullpage -->
     <!-- <script src="../resources/js/pattern/ui-fullpage.js"></script> -->
