--- a/pages/sub2.html
+++ b/pages/sub2.html
@@ -3,8 +3,19 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- x축 스크롤막기 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
     <title>Brands</title>
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="PIGEON">
+    <meta property="og:description" content="유지혜 - 피죤 개편 사이트">
+    <meta property="og:image" content="http://www.mysite.com/article/article1_featured_image.jpg">
+    <meta property="og:url" content="http://www.mysite.com/article/article1.html">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="PIGEON">
+    <meta name="twitter:description" content="유지혜 - 피죤 개편 사이트">
+    <meta name="twitter:image" content="http://www.mysite.com/article/article1.html">
+    <meta name="twitter:domain" content="PIGEON">
 
     <!-- line awesome -->
     <link rel="stylesheet"
@@ -16,6 +27,9 @@
 
     <!-- jquery CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+    <!-- lodash -->
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
 
     <!-- gsap -->
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
@@ -49,7 +63,7 @@
         <a href="#container">본문 바로가기</a>
     </div>
     <div class="wrap">
-        <header id="header">
+        <header id="header" class="header2">
             <div class="inner">
                 <h1 id="logo">
                     <a href="#">
@@ -134,7 +148,29 @@
                 </nav>
             </div>
         </header>
+        <div class="intro">
+            <div class="inner">
+                <h1>Brands</h1>
+                <p>명품 향수같은 특별한 Perfume 향기</p>
+            </div>
+        </div>
+        <div class="qucik-nav">
+        </div>
+        <div class="brand-person">
+            <div class="inner"></div>
+        </div>
+        <div class="promise">
+            <div class="inner"></div>
+        </div>
+        <div class="brands__prod">
+            <div class="inner"></div>
+        </div>
+        <div class="Philosophy">
+            <div class="inner"></div>
+        </div>
 
+        <!-- footer -->
+        <footer id="footer" include-html="./layout/footer.html"></footer>
     </div>
 </body>
 
