sub2 ) intro 완성 / quick nav 내용만 넣음

--- a/pages/sub2.html
+++ b/pages/sub2.html
@@ -149,12 +149,48 @@
             </div>
         </header>
         <div class="intro">
-            <div class="inner">
-                <h1>Brands</h1>
-                <p>명품 향수같은 특별한 Perfume 향기</p>
+            <div class="intro__inner">
+                <div class="intro__tit">
+                    <h1>Brands</h1>
+                    <p>명품 향수같은 특별한 Perfume 향기</p>
+                </div>
+                <img src="../resources/images/pattern/sub2/intro.png" alt="intro">
             </div>
         </div>
         <div class="qucik-nav">
+            <div class="quick-nav__home">
+                <button>
+                    <a href="index.html">home</a>
+                </button>
+            </div>
+            <div class="quick-nav__dep1">
+                <h3>Brand</h3>
+            </div>
+            <div class="quick-nav__dep2">
+                <ul class="dep2-lst">
+                    <li class="dep2-brand">
+                        <a href="#">피죤</a>
+                    </li>
+                    <li class="dep2-brand">
+                        <a href="#">액츠</a>
+                    </li>
+                    <li class="dep2-brand">
+                        <a href="#">무균무때</a>
+                    </li>
+                    <li class="dep2-brand">
+                        <a href="#">퓨어</a>
+                    </li>
+                    <li class="dep2-brand">
+                        <a href="#">울터치</a>
+                    </li>
+                    <li class="dep2-brand">
+                        <a href="#">습기제로</a>
+                    </li>
+                    <li class="dep2-brand">
+                        <a href="#">칼앤한스</a>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="brand-person">
             <div class="inner"></div>
