--- a/pages/sub2.html
+++ b/pages/sub2.html
@@ -43,6 +43,7 @@
     <script defer src="../resources/js/include.js"></script>
     <script defer src="../resources/js/pattern/ui-swiper.js"></script>
     <script defer src="../resources/js/pattern/ui-pattern-script.js"></script>
+    <script defer src="../resources/js/pattern/sub2.js"></script>
 
     <!-- Fullpage -->
     <!-- <script src="../resources/js/pattern/ui-fullpage.js"></script> -->
@@ -160,13 +161,21 @@
         <div class="qucik-nav">
             <div class="quick-nav__home">
                 <button>
-                    <a href="index.html">home</a>
+                    <a href="index.html">
+                        <span>home</span>
+                    </a>
                 </button>
             </div>
             <div class="quick-nav__dep1">
-                <h3>Brand</h3>
+                <h3>Brands</h3>
             </div>
             <div class="quick-nav__dep2">
+                <button class="dep2-btn">
+                    <span>피죤</span>
+                    <div class="dep2-dropbtn">
+                        <span>드롭다운버튼</span>
+                    </div>
+                </button>
                 <ul class="dep2-lst">
                     <li class="dep2-brand">
                         <a href="#">피죤</a>
