--- a/pages/index.html
+++ b/pages/index.html
@@ -94,7 +94,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="./sub2.html">
                                     <span>브랜드</span>
                                 </a>
                             </li>
@@ -142,7 +142,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="./sub2.html">
                                 <span>브랜드</span>
                             </a>
                         </li>
@@ -293,7 +293,7 @@
 만들어 드립니다.     
     </pre>
                     <button class="brand__more">
-                        <a href="#">MORE VIEW</a>
+                        <a href="./sub2.html">MORE VIEW</a>
                     </button>
                 </div>
 
