--- a/pages/sub2.html
+++ b/pages/sub2.html
@@ -67,7 +67,7 @@
         <header id="header" class="header2">
             <div class="inner">
                 <h1 id="logo">
-                    <a href="#">
+                    <a href="./index.html">
                         <span>header_logo</span>
                     </a>
                 </h1>
@@ -80,7 +80,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="./sub2.html">
                                     <span>브랜드</span>
                                 </a>
                             </li>
@@ -128,7 +128,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="./sub2.html">
                                 <span>브랜드</span>
                             </a>
                         </li>
