promise html 하다말았음

--- a/pages/sub2.html
+++ b/pages/sub2.html
@@ -237,7 +237,17 @@
             </div>
         </div>
         <div class="promise">
-            <div class="inner"></div>
+            <div class="inner">
+                <div class="brand-tit">
+                    <span class="tit-line">02</span>
+                    <span>Promise</span>
+                </div>
+                <div class="brand-person__tit">
+                    <strong>소비자를 위한</strong>
+                    <br>
+                    <strong>피죤의 3가지 약속</strong>
+                </div>
+            </div>
         </div>
         <div class="brands__prod">
             <div class="inner"></div>
