promise layout완성해야함

--- a/pages/sub2.html
+++ b/pages/sub2.html
@@ -208,10 +208,10 @@
                     <span class="tit-line">01</span>
                     <span>Brand Personality</span>
                 </div>
-                <div class="brand-person__tit">
+                <div class="brand-person__tit brand-subtit">
                     <strong>다가오는 미래를 준비하는 피죤</strong>
                 </div>
-                <div class="brand-person__txt">
+                <div class="brand-person__con">
                     <pre>
 피죤은 지난 40여년 동안 환경을 최우선으로
 고려하는 기업정신과 세계적인 품질경쟁력을
@@ -242,10 +242,29 @@
                     <span class="tit-line">02</span>
                     <span>Promise</span>
                 </div>
-                <div class="brand-person__tit">
+                <div class="brand-subtit">
                     <strong>소비자를 위한</strong>
                     <br>
                     <strong>피죤의 3가지 약속</strong>
+                </div>
+                <div class="brand-promise__con-wrap">
+                    <div class="brand-promise__con brand-promise__con1">
+                        <div class="promise-icon"></div>
+                        <div class="progress-bar"></div>
+                        <div class="promise-num">
+                            <p>Promise 1</p>
+                        </div>
+                        <div class="promise-tit">
+                            <strong>Natural</strong>
+                        </div>
+                        <div class="promise-txt">
+                            <pre>
+피죤은 자연을 섬깁니다. 
+원료부터 패키지까지 
+친환경  제품을 고집합니다. 
+                            </pre>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
